--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "bluebird": "^3.0.5",
     "ejs": "^2.3.3",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "~0.6.0",
