--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "~0.2.3",
     "include-all": "~0.1.6",
+    "lodash": "3.10.1",
     "rc": "~1.0.1",
     "sails": "~0.12.0-rc3",
     "sails-disk": "~0.10.7"
